Added First Part

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
-<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>First Page</title>
+    <title>KCC NMA Starter Project</title>
     <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">See</a></li>
+        <li><a href="#">Spray</a></li>
+      </ul>
+    </nav>
+
+    <img src="img/futura-x-Montana-x-Acronym-0746.jpg" alt=""/>
     <p>Hello, world :C</p>
+  </body>
 </html>
