--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     </nav>
 
     <img src="img/futura-x-Montana-x-Acronym-0746.jpg" alt=""/>
+    <article class="section 1">
+      <p>
+        On November 17th, iconic graffiti artist FUTURA will turn 60. To celebrate his birhtday and decades worth of artistic output, MONTANA-CANS have created a special colorway, the FUTURA 2000 Black, as part of their Iconic Series. For the global pre-launch, FUTURA asked his friends at ACRONYM to collaborate on an exclusive design to appear on the can, produced in a limited run and for this occasion only. Read more after the jump.
+      </p>
+
+    </article>
     <p>Hello, world :C</p>
   </body>
 </html>
