--- a/index.html
+++ b/index.html
@@ -25,4 +25,11 @@
     </article>
     <p>Hello, world :C</p>
   </body>
+  <footer>
+    <ul>
+      <li>
+        Contact Us
+      </li>
+    </ul>
+  </footer>
 </html>
