--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
         On November 17th, iconic graffiti artist FUTURA will turn 60. To celebrate his birhtday and decades worth of artistic output, MONTANA-CANS have created a special colorway, the FUTURA 2000 Black, as part of their Iconic Series. For the global pre-launch, FUTURA asked his friends at ACRONYM to collaborate on an exclusive design to appear on the can, produced in a limited run and for this occasion only. Read more after the jump.
       </p>
       <p>
-        On November 17th, iconic graffiti artist FUTURA will turn 60. To celebrate his birhtday and decades worth of artistic output, MONTANA-CANS have created a special colorway, the FUTURA 2000 Black, as part of their Iconic Series. For the global pre-launch, FUTURA asked his friends at ACRONYM to collaborate on an exclusive design to appear on the can, produced in a limited run and for this occasion only. Read more after the jump.
-      </p>
+        The MONTANA-CANS "FUTURA 2000 x ACRONYM" as well as a limited edition BEINGHUNTED. T-shirt will be available during the evening as well as through the BEINGHUNTED.
     </article>
-    <p>Hello, world :C</p>
   </body>
   <footer>
     <ul>
