--- a/index.html
+++ b/index.html
@@ -19,15 +19,31 @@
       <p>
         On November 17th, iconic graffiti artist FUTURA will turn 60. To celebrate his birhtday and decades worth of artistic output, MONTANA-CANS have created a special colorway, the FUTURA 2000 Black, as part of their Iconic Series. For the global pre-launch, FUTURA asked his friends at ACRONYM to collaborate on an exclusive design to appear on the can, produced in a limited run and for this occasion only. Read more after the jump.
       </p>
+      <img src="img/futura-60-montana-cans-acronym-berlin-01.jpg" alt="" />
       <p>
         The MONTANA-CANS "FUTURA 2000 x ACRONYM" as well as a limited edition BEINGHUNTED. T-shirt will be available during the evening as well as through the BEINGHUNTED.
     </article>
   </body>
   <footer>
-    <ul>
-      <li>
-        Contact Us
-      </li>
-    </ul>
+    <div class="articles">
+      <article class="article">
+        <h3>Contact Us</h3>
+          <ul>
+            <li>shop@acrnm.com</li>
+              <li>http:acrnm.om</li>
+          </ul>
+      </article>
+      <article class="article">
+        <h3>Address</h3>
+          <ul>
+            <li>ǍCRŇMř GMBH
+              Zuccalistrasse 1
+              <li>80639 Munich</li>
+              <li>Germany</li>
+            </li>
+          </ul>
+      </article>
+    </article>
+
   </footer>
 </html>
