--- a/index.html
+++ b/index.html
@@ -24,26 +24,25 @@
         The MONTANA-CANS "FUTURA 2000 x ACRONYM" as well as a limited edition BEINGHUNTED. T-shirt will be available during the evening as well as through the BEINGHUNTED.
     </article>
   </body>
+
   <footer>
     <div class="articles">
       <article class="article">
         <h3>Contact Us</h3>
           <ul>
             <li>shop@acrnm.com</li>
-              <li>http:acrnm.om</li>
+            <li>http:acrnm.om</li>
           </ul>
       </article>
       <article class="article">
         <h3>Address</h3>
           <ul>
             <li>ǍCRŇMř GMBH
-              Zuccalistrasse 1
+              Zuccalistrasse 1</li>
               <li>80639 Munich</li>
               <li>Germany</li>
-            </li>
           </ul>
       </article>
-    </article>
-
+    </div>
   </footer>
 </html>
